WebUI tarafında Admin ve Member Arealar oluşturuldu. Admin tarafında Task(Görev) ve Priority(Aciliyet) CRUD işlemleri tamamlandı. Eager Loading ile Görev kısmında Aciliyetler ilişkili olarak gösterildi

--- a/JobTrackingApp.WebUI/Views/Home/Index.cshtml
+++ b/JobTrackingApp.WebUI/Views/Home/Index.cshtml
@@ -2,7 +2,9 @@
 
 @{
     ViewBag.Title = "Anasayfa";
-    Layout = "_Layout";
+    Layout = "_StandartLayout";
 }
 
 <h2>Anasayfa</h2>
+<a asp-area="Admin" asp-controller="Home" asp-action="Index" class="btn btn-sm btn-outline-danger">Admin</a>
+<a asp-area="Member" asp-controller="Home" asp-action="Index" class="btn btn-sm btn-outline-info">Member</a>
