--- a/JobTrackingApp.WebUI/Areas/Admin/Views/TaskOrder/Index.cshtml
+++ b/JobTrackingApp.WebUI/Areas/Admin/Views/TaskOrder/Index.cshtml
@@ -1,7 +1,51 @@
-﻿
+﻿@model List<AllTasksListViewModel>
 @{
     ViewBag.Title = "Job Tracking App";
     Layout = "_AdminLayout";
 }
 
 <h2>Görev Emirleri</h2>
+<hr>
+@if (Model.Count > 0)
+{
+    <table class="table table-striped table-bordered table-hover">
+        <thead>
+        <tr>
+            <th>#</th>
+            <th>Adı</th>
+            <th>Oluşturulma Tarihi</th>
+            <th>Aciliyet Derecesi</th>
+            <th>Atanan Kullanıcı</th>
+            <th>Rapor Sayısı</th>
+            <th>İşlemler</th>
+        </tr>
+        </thead>
+        <tbody>
+            @foreach (AllTasksListViewModel item in Model)
+            {
+                <tr>
+                    <td>@item.Id</td>
+                    <td>@item.Name</td>
+                    <td>@item.CreatedDate.ToString("D")</td>
+                    <td>@item.Priority.Level</td>
+                    <td>@(item.AppUser != null ? $"{item.AppUser.FirstName} {item.AppUser.SurName}" : Html.Raw("<span class='badge badge-danger'>Atanan Personel Bulunamadı</span>"))</td>
+                    <td>@item.Reports.Count</td>
+                    <td>
+                        @if (item.AppUser == null)
+                        {
+                            <a class="btn btn-sm btn-outline-primary" asp-action="AssignPersonel" asp-controller="TaskOrder" asp-route-id="@item.Id">Personel Ata</a>
+                        }
+                        else
+                        {
+                            <a class="btn btn-sm btn-outline-info" asp-action="Detail" asp-controller="TaskOrder" asp-route-id="@item.Id">Detaylar</a>
+                        }
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
+else
+{
+    <div class="alert alert-info">Bu modül için herhangi bir kayıt bulunamadı!</div>
+}
